--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#FF80AB</color>
-    <color name="colorPrimaryDark">#FA4D88</color>
+    <color name="colorPrimary">#00B8D4</color>
+    <color name="colorPrimaryDark">#0091EA</color>
     <color name="clear">#00BB86FC</color>
     <color name="light_teal">#A8FFFA</color>
 
