--- a/app/src/main/res/layout/dialog_contact_user.xml
+++ b/app/src/main/res/layout/dialog_contact_user.xml
@@ -3,68 +3,100 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="20dp"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/contactDetails_LBL_contactCity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Tel Aviv"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contactDetails_LBL_contactEmail"
-        app:layout_constraintVertical_bias="0.148" />
+    android:layout_height="match_parent"
+    android:background="@drawable/dialog_background"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/contactDetails_LBL_itemName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="Microwave"
         android:textIsSelectable="true"
-        android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="35sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/contactDetails_LBL_contactName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.116"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/contactDetails_LBL_contactName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:background="@drawable/round_thin_border_edges"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="20dp"
         android:text="Giving User"
         android:textIsSelectable="true"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/contactDetails_LBL_contactEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contactDetails_LBL_itemName"
-        app:layout_constraintVertical_bias="0.058" />
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:layout_editor_absoluteX="16dp" />
 
     <TextView
         android:id="@+id/contactDetails_LBL_contactEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:background="@drawable/round_thin_border_edges"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="20dp"
         android:text="Giving@user.com"
         android:textIsSelectable="true"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/contactDetails_LBL_contactCity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/contactDetails_LBL_contactPhone"
         app:layout_constraintTop_toBottomOf="@+id/contactDetails_LBL_contactName"
-        app:layout_constraintVertical_bias="0.153" />
+        tools:layout_editor_absoluteX="16dp" />
+
+    <TextView
+        android:id="@+id/contactDetails_LBL_contactCity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/round_thin_border_edges"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="20dp"
+        android:text="Tel Aviv"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contactDetails_LBL_contactPhone"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <TextView
+        android:id="@+id/contactDetails_LBL_contactPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/round_thin_border_edges"
+        android:gravity="center"
+        android:paddingStart="10dp"
+
+        android:paddingTop="20dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="20dp"
+        android:text="054-2799700"
+        android:textIsSelectable="true"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/contactDetails_LBL_contactCity"
+        app:layout_constraintTop_toBottomOf="@+id/contactDetails_LBL_contactEmail"
+        tools:layout_editor_absoluteX="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
