--- a/app/src/main/res/layout/dialog_update_account.xml
+++ b/app/src/main/res/layout/dialog_update_account.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/dialog_background"
     android:padding="15dp">
 
+
     <TextView
         android:id="@+id/updateAccount_LBL_title"
         android:layout_width="match_parent"
@@ -16,28 +17,10 @@
         android:text="@string/update_account"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/updateAccount_IMG_photo"
-        android:layout_width="204dp"
-        android:layout_height="199dp"
-        android:background="@drawable/photo_empty_frame"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/updateAccount_EDT_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateAccount_LBL_title" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:layout_editor_absoluteX="13dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/updateAccount_EDT_name"
@@ -50,17 +33,13 @@
         app:boxCornerRadiusBottomStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
         app:boxCornerRadiusTopStart="15dp"
+        android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/updateAccount_EDT_city"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/updateAccount_EDT_city"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/updateAccount_EDT_city"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateAccount_IMG_photo"
-        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintTop_toBottomOf="@+id/updateAccount_LBL_title"
         app:startIconDrawable="@drawable/ic_name"
-        app:startIconTint="@color/colorPrimary">
+        app:startIconTint="@color/colorPrimary"
+        tools:layout_editor_absoluteX="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -68,7 +47,6 @@
             android:inputType="textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/updateAccount_EDT_city"
@@ -78,18 +56,16 @@
         android:hint="@string/your_city"
         android:textColorHint="@color/colorPrimary"
         app:boxCornerRadiusBottomEnd="15dp"
+        android:layout_marginTop="10dp"
         app:boxCornerRadiusBottomStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
         app:boxCornerRadiusTopStart="15dp"
         app:boxStrokeColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/updateAccount_EDT_phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/updateAccount_EDT_phone"
-        app:layout_constraintStart_toEndOf="@+id/updateAccount_EDT_name"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateAccount_EDT_name"
         app:startIconDrawable="@drawable/ic_country"
-        app:startIconTint="@color/colorPrimary">
+        app:startIconTint="@color/colorPrimary"
+        tools:layout_editor_absoluteX="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -109,15 +85,13 @@
         app:boxCornerRadiusBottomStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
         app:boxCornerRadiusTopStart="15dp"
+        android:layout_marginTop="10dp"
         app:boxStrokeColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/updateAccount_BTN_submit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/updateAccount_BTN_submit"
-        app:layout_constraintStart_toEndOf="@+id/updateAccount_EDT_city"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateAccount_EDT_city"
         app:startIconDrawable="@drawable/ic_phone"
-        app:startIconTint="@color/colorPrimary">
+        app:startIconTint="@color/colorPrimary"
+        tools:layout_editor_absoluteX="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -131,15 +105,13 @@
         android:id="@+id/updateAccount_BTN_submit"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginTop="10dp"
         android:text="@string/submit"
         android:textStyle="bold"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateAccount_EDT_phone"
-        app:layout_constraintVertical_bias="0.997" />
+        tools:layout_editor_absoluteX="15dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
