--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/profile_LAY_profile"
     tools:context=".fragments.Fragment_profile">
     <RelativeLayout
@@ -18,11 +19,15 @@
         android:visibility="visible"/>
 
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_IMG_picture"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:scaleType="fitXY"
+        android:layout_height="120dp"
         android:clickable="true"
+        app:strokeColor="@color/white"
+        app:strokeWidth="5dp"
+        android:foreground="?attr/selectableItemBackground"
         android:src="@drawable/ic_profile"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"/>
@@ -81,6 +86,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/profile_BTN_update"
         android:layout_width="wrap_content"
+        app:cornerRadius="30dp"
         android:layout_height="wrap_content"
         android:text="@string/update_profile"
         android:backgroundTint="@color/colorPrimaryDark"
