--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/bottom_menu_ask"
         android:enabled="true"
-        android:icon="@drawable/ic_post"
+        android:icon="@drawable/ic_give"
         android:title="@string/object_to_ask" />
     <item
         android:id="@+id/bottom_menu_profile"
