--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!--TODO: Arrribute Good Ware,Those Icons,Flaticon,DinosoftLabs,photo3idea_studio,Smartline,Eucalyp,Pixel perfect-->
+    <!--TODO: Arrribute Good Ware,Flaticon,DinosoftLabs,Smartline-->
 
     <FrameLayout
         android:id="@+id/main_LAY_mainPageFragment"
@@ -21,7 +21,7 @@
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/giveFragment_LAY_sortFilterFragment" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_container" />
 
     <FrameLayout
         android:id="@+id/main_LAY_givePageFragment"
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/giveFragment_LAY_sortFilterFragment" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_container" />
 
     <FrameLayout
         android:id="@+id/main_LAY_askPageFragment"
@@ -43,7 +43,7 @@
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/giveFragment_LAY_sortFilterFragment" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_container" />
 
     <FrameLayout
         android:id="@+id/main_LAY_profilePageFragment"
@@ -54,7 +54,7 @@
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/giveFragment_LAY_sortFilterFragment" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_container" />
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
         android:id="@+id/main_BAR_progressBar"
@@ -85,16 +85,6 @@
         app:layout_constraintVertical_bias="1"
         app:menu="@menu/bottom_navigation_menu" />
 
-    <RelativeLayout
-        android:id="@+id/giveFragment_LAY_sortFilterFragment"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
     <FrameLayout
         android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
@@ -112,10 +102,6 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             app:title="@string/app_name"
-            android:elevation="4dp"
-            app:menu="@menu/top_app_bar2"
-            android:theme="@style/ToolBarStyle"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dialog"
             app:titleTextColor="@color/white" />
 
         <com.miguelcatalan.materialsearchview.MaterialSearchView
@@ -123,10 +109,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="visible" />
-
-
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
 
