Added homepage base and strings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:id="@+id/main_LAY_mainPageFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#E0F7FA"
+        android:background="#dcf3fe"
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:id="@+id/main_LAY_givePageFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#E0F7FA"
+        android:background="#dcf3fe"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:id="@+id/main_LAY_askPageFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#E0F7FA"
+        android:background="#dcf3fe"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:id="@+id/main_LAY_profilePageFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#E0F7FA"
+        android:background="#dcf3fe"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
