--- a/app/src/main/res/layout/fragment_ask_items.xml
+++ b/app/src/main/res/layout/fragment_ask_items.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorPrimary"
         app:srcCompat="@drawable/ic_add"
+        android:visibility="invisible"
         app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
