--- a/app/src/main/res/layout/fragment_give_items.xml
+++ b/app/src/main/res/layout/fragment_give_items.xml
@@ -35,6 +35,7 @@
         android:id="@+id/giveFragment_BTN_addItemButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
