--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -112,6 +112,17 @@
 
         </androidx.viewpager2.widget.ViewPager2>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/profile_BTN_addItemButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            app:srcCompat="@drawable/ic_add"
+            app:tint="@color/white" />
     </RelativeLayout>
 
 </FrameLayout>
