--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,128 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profile_LAY_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/profile_LAY_profile"
     tools:context=".fragments.Fragment_profile">
-    <RelativeLayout
-        android:id="@+id/profile_LAY_top"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/profile_IMG_font"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:background="@color/colorPrimary"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_font_profile"
-        android:visibility="visible"/>
-
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"/>
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_IMG_picture"
         android:layout_width="120dp"
-        android:scaleType="fitXY"
         android:layout_height="120dp"
         android:clickable="true"
-        app:strokeColor="@color/white"
-        app:strokeWidth="5dp"
         android:foreground="?attr/selectableItemBackground"
-        android:src="@drawable/ic_profile"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="20dp">
-
-    <TextView
-        android:id="@+id/profile_LBL_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_name"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/profile_LBL_city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_city"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/profile_LBL_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_phone"
-        android:textColor="@color/white"
-        android:textSize="20sp"/>
-
-    <TextView
-        android:id="@+id/profile_LBL_mail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:text="@string/user_mail"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_above="@id/viewPager"
-        android:gravity="center"
-        android:layout_marginBottom="50dp"
-        android:layout_marginStart="40dp">
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/profile_BTN_update"
-        android:layout_width="wrap_content"
-        app:cornerRadius="30dp"
-        android:layout_height="wrap_content"
-        android:text="@string/update_profile"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:layout_marginTop="10dp"/>
-
-    <ImageView
-        android:id="@+id/profile_IMG_line"
-        android:layout_width="300dp"
         android:scaleType="fitXY"
-        android:layout_gravity="center"
+        android:src="@drawable/ic_profile"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_IMG_font"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintVertical_bias="0.1"
+        app:strokeColor="@color/white"
+        app:strokeWidth="5dp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_IMG_font"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profile_IMG_picture"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintTop_toTopOf="parent">
 
-        android:src="@drawable/ic_line" />
-
-
-    </LinearLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/profile_IMG_font">
-
-        </androidx.viewpager2.widget.ViewPager2>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/profile_BTN_addItemButton"
+        <TextView
+            android:id="@+id/profile_LBL_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimary"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-            app:srcCompat="@drawable/ic_add"
-            app:tint="@color/white" />
-    </RelativeLayout>
+            android:text="@string/user_name"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/profile_LBL_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/user_city"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/profile_LBL_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/user_phone"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/profile_LBL_mail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="@string/user_mail"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/viewPager"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_IMG_font"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.95">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/profile_BTN_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/colorPrimaryDark"
+            android:text="@string/update_profile"
+            app:cornerRadius="30dp" />
+
+        <ImageView
+            android:id="@+id/profile_IMG_line"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_line" />
+
+        <TextView
+            android:id="@+id/profile_LBL_listType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/items_im_giving"
+            android:textColor="@color/white"
+            android:textSize="30sp"/>
+
+
+    </LinearLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/profile_IMG_font"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_IMG_font">
+
+    </androidx.viewpager2.widget.ViewPager2>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/profile_BTN_addItemButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.965"
+        app:layout_constraintHorizontal_bias="0.935"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@color/white" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
