--- a/app/src/main/res/drawable/photo_empty_frame.xml
+++ b/app/src/main/res/drawable/photo_empty_frame.xml
@@ -6,10 +6,10 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
             <stroke
-                android:width="2dp"
+                android:width="1dp"
 
-                android:color="@color/colorPrimary" />
-            <corners android:radius="30dp" />
+                android:color="@color/quantum_grey500" />
+            <corners android:radius="15dp" />
         </shape>
     </item>
     <item android:drawable="@drawable/ic_baseline_add_a_photo_24"
