--- a/app/src/main/res/drawable/round_edt_border_edges.xml
+++ b/app/src/main/res/drawable/round_edt_border_edges.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="2dp"
+        android:width="1dp"
 
-        android:color="@color/colorPrimary" />
-    <corners android:radius="30dp" />
+        android:color="@color/quantum_grey600" />
+    <corners android:radius="15dp" />
 
 </shape>
