--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -130,6 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_in_with"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,6 +143,7 @@
         android:layout_height="40dp"
         android:layout_margin="10dp"
         android:clickable="true"
+        android:visibility="invisible"
         android:foreground="?attr/selectableItemBackground"
         android:src="@drawable/ic_facebook"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -157,6 +159,7 @@
         android:layout_height="40dp"
         android:layout_margin="10dp"
         android:clickable="true"
+        android:visibility="invisible"
         android:foreground="?attr/selectableItemBackground"
         android:src="@drawable/ic_google"
         app:layout_constraintBottom_toBottomOf="parent"
