--- a/app/src/main/res/layout/fragment_last_giveitem.xml
+++ b/app/src/main/res/layout/fragment_last_giveitem.xml
@@ -9,7 +9,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layerType="hardware"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="15dp"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         app:cardElevation="5dp"
@@ -41,7 +41,8 @@
                     android:drawableTint="@color/white"
                     android:gravity="center"
                     android:text="@string/latest_gift"
-                    android:textSize="20sp"
+                    android:textSize="19sp"
+                    android:lines="1"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     app:autoSizeMinTextSize="1px"
@@ -65,6 +66,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textStyle="bold"
+                    android:lines="1"
                     android:text="Refrigirator"
                     android:textSize="20sp" />
 
