--- a/app/src/main/res/layout/dialog_contact_user.xml
+++ b/app/src/main/res/layout/dialog_contact_user.xml
@@ -51,6 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/round_thin_border_edges"
+        android:drawableLeft="@drawable/ic_mail"
+        android:drawableTint="@color/quantum_grey500"
         android:gravity="center"
         android:paddingStart="10dp"
         android:paddingTop="20dp"
@@ -89,6 +91,8 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/round_thin_border_edges"
         android:gravity="center"
+        android:drawableLeft="@drawable/ic_phone"
+        android:drawableTint="@color/quantum_grey500"
         android:paddingStart="10dp"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
