--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -136,6 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
+            android:lines="1"
             android:text="@string/remove_item"
             android:textAllCaps="false"
             android:textStyle="bold"
@@ -149,6 +150,7 @@
             android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:text="@string/edit_item"
+            android:lines="1"
             android:textAllCaps="false"
             android:textStyle="bold"
             app:backgroundTint="@color/editBtnColor"
